
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint32_t ;
typedef int uint16_t ;
struct TYPE_2__ {int RISR; int SR; int MISR; } ;
typedef scalar_t__ FlagStatus ;


 TYPE_1__* DCMI ;
 int IS_DCMI_GET_FLAG (int) ;
 scalar_t__ RESET ;
 scalar_t__ SET ;
 int assert_param (int ) ;

FlagStatus DCMI_GetFlagStatus(uint16_t DCMI_FLAG)
{
  FlagStatus bitstatus = RESET;
  uint32_t dcmireg, tempreg = 0;


  assert_param(IS_DCMI_GET_FLAG(DCMI_FLAG));


  dcmireg = (((uint16_t)DCMI_FLAG) >> 12);

  if (dcmireg == 0x01)
  {
    tempreg= DCMI->RISR;
  }
  else if (dcmireg == 0x02)
  {
    tempreg = DCMI->SR;
  }
  else
  {
    tempreg = DCMI->MISR;
  }

  if ((tempreg & DCMI_FLAG) != (uint16_t)RESET )
  {
    bitstatus = SET;
  }
  else
  {
    bitstatus = RESET;
  }

  return bitstatus;
}
